[gd_scene load_steps=18 format=2]

[ext_resource path="res://ObjectClicked.gd" type="Script" id=1]
[ext_resource path="res://Sprites/MicrawaWaste/battery.png" type="Texture" id=2]
[ext_resource path="res://Sprites/MicrawaWaste/micrawa_panorama.png" type="Texture" id=3]
[ext_resource path="res://Sprites/MicrawaWaste/metal_plate.png" type="Texture" id=4]
[ext_resource path="res://Sprites/MicrawaWaste/catalyzator.png" type="Texture" id=5]
[ext_resource path="res://Sprites/MicrawaWaste/gas_bottle.png" type="Texture" id=6]
[ext_resource path="res://Sprites/MicrawaWaste/car.png" type="Texture" id=7]
[ext_resource path="res://Sprites/MicrawaWaste/rocket_fuel.png" type="Texture" id=8]
[ext_resource path="res://Sprites/MicrawaWaste/cable_bunch.png" type="Texture" id=9]
[ext_resource path="res://Sprites/MicrawaWaste/space_drive.png" type="Texture" id=10]

[sub_resource type="CircleShape2D" id=1]
radius = 10.0918

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10.2174, 4.88477 )

[sub_resource type="CapsuleShape2D" id=3]
radius = 4.44385

[sub_resource type="CapsuleShape2D" id=4]
radius = 5.31952
height = 10.7209

[sub_resource type="CapsuleShape2D" id=5]
radius = 4.04828
height = 9.89526

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 5.31308, 8.68026 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 8.35217, 4.03604 )

[node name="Control" type="Node2D"]
position = Vector2( 2.99664, -5.99323 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 510.232, 308.048 )
scale = Vector2( 0.353681, 0.470683 )
z_index = -10
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Wires" type="Area2D" parent="."]
position = Vector2( -7.07104, 11.3137 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="Wires"]
position = Vector2( 263.038, 551.761 )
scale = Vector2( 0.0287547, 0.0259754 )
texture = ExtResource( 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wires"]
position = Vector2( 263.461, 550.235 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 264.304, 526.372 )
scale = Vector2( 0.165059, 0.186044 )
texture = ExtResource( 7 )

[node name="Battery" type="Area2D" parent="."]
position = Vector2( -10.4346, -51.7535 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="Battery"]
position = Vector2( 233.742, 523.301 )
scale = Vector2( 0.0287547, 0.0259754 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Battery"]
position = Vector2( 232.4, 524.958 )
shape = SubResource( 2 )

[node name="Catalysator" type="Area2D" parent="."]
position = Vector2( 735.253, 45.9908 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="Catalysator"]
position = Vector2( 233.742, 523.301 )
scale = Vector2( 0.0287547, 0.0259754 )
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Catalysator"]
position = Vector2( 232.177, 523.176 )
rotation = 0.760963
shape = SubResource( 3 )

[node name="Canister" type="Area2D" parent="."]
position = Vector2( 236.88, -21.3569 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="Canister"]
position = Vector2( 231.96, 519.07 )
rotation = 0.253073
scale = Vector2( 0.0287547, 0.0259754 )
texture = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Canister"]
position = Vector2( 230.395, 520.28 )
shape = SubResource( 4 )

[node name="Fuel" type="Area2D" parent="."]
position = Vector2( 594.714, -393.42 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="Fuel"]
position = Vector2( 233.742, 523.301 )
rotation = 1.01578
scale = Vector2( 0.0287547, 0.0259754 )
texture = ExtResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Fuel"]
position = Vector2( 232.4, 521.981 )
rotation = 1.52367
shape = SubResource( 5 )

[node name="CarHood" type="Area2D" parent="."]
position = Vector2( -100.187, -300.766 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="CarHood"]
position = Vector2( 233.742, 523.301 )
scale = Vector2( 0.0287547, 0.0259754 )
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="CarHood"]
position = Vector2( 232.003, 523.172 )
rotation = 0.762709
shape = SubResource( 6 )

[node name="SpaceDrive" type="Area2D" parent="."]
position = Vector2( 728.377, -47.5521 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="SpaceDrive"]
position = Vector2( 233.742, 523.301 )
scale = Vector2( 0.0287547, 0.0259754 )
texture = ExtResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpaceDrive"]
position = Vector2( 232.871, 524.722 )
shape = SubResource( 7 )
[connection signal="input_event" from="Wires" to="Wires" method="_on_Object_input_event"]
[connection signal="mouse_entered" from="Wires" to="Wires" method="_on_Object_mouse_entered"]
[connection signal="mouse_exited" from="Wires" to="Wires" method="_on_Object_mouse_exited"]
[connection signal="input_event" from="Battery" to="Battery" method="_on_Object_input_event"]
[connection signal="mouse_entered" from="Battery" to="Battery" method="_on_Object_mouse_entered"]
[connection signal="mouse_exited" from="Battery" to="Battery" method="_on_Object_mouse_exited"]
[connection signal="input_event" from="Catalysator" to="Catalysator" method="_on_Object_input_event"]
[connection signal="mouse_entered" from="Catalysator" to="Catalysator" method="_on_Object_mouse_entered"]
[connection signal="mouse_exited" from="Catalysator" to="Catalysator" method="_on_Object_mouse_exited"]
[connection signal="input_event" from="Canister" to="Canister" method="_on_Object_input_event"]
[connection signal="mouse_entered" from="Canister" to="Canister" method="_on_Object_mouse_entered"]
[connection signal="mouse_exited" from="Canister" to="Canister" method="_on_Object_mouse_exited"]
[connection signal="input_event" from="Fuel" to="Fuel" method="_on_Object_input_event"]
[connection signal="mouse_entered" from="Fuel" to="Fuel" method="_on_Object_mouse_entered"]
[connection signal="mouse_exited" from="Fuel" to="Fuel" method="_on_Object_mouse_exited"]
[connection signal="input_event" from="CarHood" to="CarHood" method="_on_Object_input_event"]
[connection signal="mouse_entered" from="CarHood" to="CarHood" method="_on_Object_mouse_entered"]
[connection signal="mouse_exited" from="CarHood" to="CarHood" method="_on_Object_mouse_exited"]
[connection signal="input_event" from="SpaceDrive" to="SpaceDrive" method="_on_Object_input_event"]
[connection signal="mouse_entered" from="SpaceDrive" to="SpaceDrive" method="_on_Object_mouse_entered"]
[connection signal="mouse_exited" from="SpaceDrive" to="SpaceDrive" method="_on_Object_mouse_exited"]
